places emoji on face with windowed average, still WIP

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,9 +3,30 @@
   width: 500px;
   height: 375px;
   border: 10px #333 solid;
+  position: relative;
 }
 
 .videoElement {
+  -o-transform : scaleX(-1);
+  -webkit-transform : scaleX(-1);
+  transform : scaleX(-1);
+  -ms-filter : fliph; /*IE*/
+  filter : fliph; /*IE*/
+        
   width: 500px;
   height: 375px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  -o-transform : scaleX(-1);
+  -webkit-transform : scaleX(-1);
+  transform : scaleX(-1);
+  -ms-filter : fliph; /*IE*/
+  filter : fliph; /*IE*/
+
+  width : 500px;
+  height : 375px;
 }
